# down-conv

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  COMANDI.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  STATUS.md  pyproject.toml  requirements.txt
.cursor/rules/: dev-workflow.mdc  error-handling-edges.mdc  installer-windows.mdc  preserve-working-code.mdc  project-core.mdc  pyside6-gui.mdc  ui-ux-2026.mdc  yt-dlp-ffmpeg.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-catalina.yml  release.yml
bundle/ffmpeg/: README.md
docs/: API_DESIGN.md  ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT_GUIDE.md  DEV_MANAGEMENT.md  GAP_ANALYSIS.md  INDEX.md  INSTALLER.md  PROJECT_SPEC.md  RELEASE_CHECKLIST.md  ROADMAP_2026.md  SITI_SUPPORTATI.md  TECH_STACK.md  WORKFLOW.md
installer/: DownConv.iss
scripts/: build.ps1  build.sh  check.ps1  generate_icon.py  run.ps1  run.sh
src/: __init__.py  run_downconv.py
src/downconv/: __init__.py  app.py  main.py
src/downconv/engines/: __init__.py  ffmpeg_engine.py  ytdlp_engine.py
src/downconv/gui/: __init__.py  main_window.py
src/downconv/services/: __init__.py  conversion_service.py  download_queue_service.py  download_service.py
src/downconv/utils/: __init__.py  config.py  disk_check.py  ffmpeg_provider.py  logging_config.py  paths.py  report_bug.py  single_instance.py  update_check.py
tests/: __init__.py  test_download_queue.py  test_engine_ffmpeg.py  test_engine_ytdlp.py
(+11 files in other folders)
