[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "downconv"
version = "0.4.5"
description = "Download YouTube e conversione audio batch"
requires-python = ">=3.8,<3.11"
dependencies = [
    "PySide2>=5.15.0",
    "platformdirs>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
